--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				</header>
 				<a href="#" class="image main"><img src="images/IMG_6382.jpg" alt="" /></a>
 				<ul class="actions special">
-					<li><a href="Resume.pdf" class="button large">Resume</a></li>
+					<li><a href="Resume 2023.pdf" class="button large">Resume</a></li>
 				</ul>
 			</article>
 
